--- a/src/renderer/src/assets/index.css
+++ b/src/renderer/src/assets/index.css
@@ -19,4 +19,16 @@
     button {
         -webkit-app-region: no-drag;
     }
+
+    ::-webkit-scrollbar {
+        @apply w-2;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        @apply bg-[#555] rounded-lg;
+    }
+
+    ::-webkit-scrollbar-track {
+        @apply bg-transparent;
+    }
 }
